k8s/service7/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service7-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service7
  template:
    metadata:
     labels:
       app: service7
    spec:
      containers:
        - image: service7:0.1
          imagePullPolicy: Never
          name: service7
          ports:
            - containerPort: 8080
