k8s/service7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service7-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service7
